--- a/css/animation.css
+++ b/css/animation.css
@@ -74,8 +74,8 @@
 @keyframes fadeIn {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(0, 10%, 0);
-    transform: translate3d(0, 10%, 0);
+    -webkit-transform: translate3d(0, 5px, 0);
+    transform: translate3d(0, 5px, 0);
   }
   40% {
     opacity: 1;
@@ -92,8 +92,8 @@
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(0, 10%, 0);
-    transform: translate3d(0, 10%, 0);
+    -webkit-transform: translate3d(0, 5px, 0);
+    transform: translate3d(0, 5px, 0);
   }
   40% {
     opacity: 1;
